gcc/testsuite/rust/rustc/ui/pub/pub-ident-fn-3.rs
// #60115

mod foo {
    pub bar();
// { dg-error "" "" { target *-*-* } .-1 }
}

fn main() {}

